Solved task 1